Add third-party API connection and refactor accordingly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-external-api/mp-rest/url=https://hub.dummyapis.com
+external-api/mp-rest/url=https://hub.dummyapis.com/vj/4BSnU36
 external-api/mp-rest/connectTimeout=1000
 external-api/mp-rest/readTimeout=20000
 quarkus.tls.trust-all=true
